fixed z-index

--- a/src/assets/css/site.css
+++ b/src/assets/css/site.css
@@ -31,3 +31,7 @@
 [v-cloak]>* {
     display: none;
 }
+
+#map-card {
+    z-index: 0;
+}
